add basic backend skeleton

--- a/package.json
+++ b/package.json
@@ -17,23 +17,17 @@
     "url": "https://github.com/head-empty-just-blocks/Pollen/issues"
   },
   "homepage": "https://github.com/head-empty-just-blocks/Pollen#readme",
-  "devDependencies": {
-    "webpack": "^5.24.4",
-    "webpack-cli": "^4.5.0"
-  },
+  "devDependencies": {},
   "dependencies": {
     "axios": "^0.21.1",
+    "compression": "^1.7.4",
+    "connect-session-sequelize": "^7.1.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
+    "sequelize": "^6.5.0",
     "three": "^0.126.1"
   }
 }
