--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./start_frontend.sh"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
     "axios": "^0.21.1",
     "compression": "^1.7.4",
     "connect-session-sequelize": "^7.1.1",
+    "eslint": "^7.22.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "morgan": "^1.10.0",
