--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "axios": "^0.21.1",
     "compression": "^1.7.4",
     "connect-session-sequelize": "^7.1.1",
-    "eslint": "^7.22.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "mapbox-gl": "^2.1.1",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
