--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./start_frontend.sh"
+    "start": "./start_frontend.sh",
+    "seed": "node seed.js"
   },
   "repository": {
     "type": "git",
@@ -25,10 +26,10 @@
     "connect-session-sequelize": "^7.1.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "mapbox-gl": "^2.1.1",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
+    "pg": "^8.5.1",
     "sequelize": "^6.5.0",
     "three": "^0.126.1"
   }
