--- a/package.json
+++ b/package.json
@@ -1,35 +1,108 @@
 {
-  "name": "Pollen",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./start_frontend.sh"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/head-empty-just-blocks/Pollen.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/head-empty-just-blocks/Pollen/issues"
-  },
-  "homepage": "https://github.com/head-empty-just-blocks/Pollen#readme",
-  "devDependencies": {},
-  "dependencies": {
-    "axios": "^0.21.1",
-    "compression": "^1.7.4",
-    "connect-session-sequelize": "^7.1.1",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "mapbox-gl": "^2.1.1",
-    "morgan": "^1.10.0",
-    "passport": "^0.4.1",
-    "passport-google-oauth": "^2.0.0",
-    "sequelize": "^6.5.0",
-    "three": "^0.126.1"
-  }
+	"name": "Pollen",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/head-empty-just-blocks/Pollen.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/head-empty-just-blocks/Pollen/issues"
+	},
+	"homepage": "https://github.com/head-empty-just-blocks/Pollen#readme",
+	"private": true,
+	"dependencies": {
+		"@material-ui/core": "^4.11.0",
+		"axios": "^0.21.1",
+		"compression": "^1.7.4",
+		"connect-session-sequelize": "^7.1.1",
+		"deck.gl": "8.1.9",
+		"eosjs": "^21.0.3",
+		"express": "^4.17.1",
+		"express-session": "^1.17.1",
+		"mapbox-gl": "^2.1.1",
+		"morgan": "^1.10.0",
+		"passport": "^0.4.1",
+		"passport-google-oauth": "^2.0.0",
+		"pg": "^8.5.1",
+		"prop-types": "^15.7.2",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"react-map-gl": "5.2.3",
+		"react-map-gl-geocoder": "2.1.3",
+		"react-redux": "^7.2.2",
+		"react-router-dom": "^5.2.0",
+		"redux": "^4.0.5",
+		"redux-logger": "^3.0.6",
+		"redux-thunk": "^2.3.0",
+		"sequelize": "^6.5.0",
+		"text-encoding": "^0.7.0",
+		"three": "^0.126.1"
+	},
+	"scripts": {
+		"build-client": "webpack",
+		"build-client-watch": "webpack -w",
+		"lint": "eslint ./ --ignore-path .gitignore",
+		"lint-fix": "npm run lint -- --fix",
+		"prettify": "prettier --write \"**/*.{js,jsx,json,css,scss,md}\"",
+		"postinstall": "touch secrets.js",
+		"seed": "node script/seed.js",
+		"start": "node server",
+		"start-dev": "NODE_ENV='development' npm run build-client-watch & NODE_ENV='development' npm run start-server",
+		"start-server": "nodemon server -e html,js,scss --ignore public --ignore client"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"lint-staged": {
+		"*.{js,jsx}": [
+			"prettier --write",
+			"npm run lint-fix",
+			"git add"
+		],
+		"*.{css,scss,json,md}": [
+			"prettier --write",
+			"git add"
+		]
+	},
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	],
+	"devDependencies": {
+		"@babel/core": "^7.4.3",
+		"@babel/plugin-proposal-class-properties": "7.4.0",
+		"@babel/plugin-proposal-decorators": "7.4.0",
+		"@babel/plugin-proposal-export-namespace-from": "7.2.0",
+		"@babel/plugin-proposal-function-sent": "7.2.0",
+		"@babel/plugin-proposal-json-strings": "7.2.0",
+		"@babel/plugin-proposal-numeric-separator": "7.2.0",
+		"@babel/plugin-proposal-throw-expressions": "7.2.0",
+		"@babel/plugin-syntax-dynamic-import": "7.2.0",
+		"@babel/plugin-syntax-import-meta": "7.2.0",
+		"@babel/polyfill": "^7.4.3",
+		"@babel/preset-env": "^7.4.3",
+		"@babel/preset-react": "^7.0.0",
+		"@babel/register": "^7.4.0",
+		"babel-eslint": "^10.0.1",
+		"babel-loader": "^8.0.5",
+		"css-loader": "^5.1.3",
+		"husky": "^1.3.1",
+		"lint-staged": "^8.1.5",
+		"nodemon": "^2.0.7",
+		"prettier": "^2.2.1",
+		"redux-devtools-extension": "^2.13.9",
+		"style-loader": "^2.0.0",
+		"url-loader": "^4.1.1",
+		"webpack": "^4.16.4",
+		"webpack-cli": "^3.1.0"
+	}
 }
