--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
 		"url": "git+https://github.com/head-empty-just-blocks/Pollen.git"
 	},
 	"keywords": [],
+	"engines": {
+		"node": "~12.11.1"
+	},
 	"author": "",
 	"license": "ISC",
 	"bugs": {
@@ -95,6 +98,8 @@
 		"babel-eslint": "^10.0.1",
 		"babel-loader": "^8.0.5",
 		"css-loader": "^5.1.3",
+		"eslint-config-prettier": "^8.1.0",
+		"eslint-plugin-react": "^7.23.0",
 		"husky": "^1.3.1",
 		"lint-staged": "^8.1.5",
 		"nodemon": "^2.0.7",
