--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
 		"lint-fix": "npm run lint -- --fix",
 		"prettify": "prettier --write \"**/*.{js,jsx,json,css,scss,md}\"",
 		"postinstall": "touch secrets.js",
-		"seed": "node script/seed.js",
+		"seed": "node seed.js",
 		"start": "node server",
 		"start-dev": "NODE_ENV='development' npm run build-client-watch & NODE_ENV='development' npm run start-server",
 		"start-server": "nodemon server -e html,js,scss --ignore public --ignore client"
@@ -64,22 +64,10 @@
 		}
 	},
 	"lint-staged": {
-		"*.{js,jsx}": [
-			"prettier --write",
-			"npm run lint-fix",
-			"git add"
-		],
-		"*.{css,scss,json,md}": [
-			"prettier --write",
-			"git add"
-		]
+		"*.{js,jsx}": [ "prettier --write", "npm run lint-fix", "git add" ],
+		"*.{css,scss,json,md}": [ "prettier --write", "git add" ]
 	},
-	"browserslist": [
-		">0.2%",
-		"not dead",
-		"not ie <= 11",
-		"not op_mini all"
-	],
+	"browserslist": [ ">0.2%", "not dead", "not ie <= 11", "not op_mini all" ],
 	"devDependencies": {
 		"@babel/core": "^7.4.3",
 		"@babel/plugin-proposal-class-properties": "7.4.0",
