--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 	],
 	"dependencies": {
 		"@material-ui/core": "^4.11.0",
+		"@material-ui/icons": "^4.11.2",
 		"axios": "^0.21.1",
 		"compression": "^1.7.4",
 		"connect-session-sequelize": "^7.1.1",
