--- a/package.json
+++ b/package.json
@@ -53,11 +53,14 @@
 		"not op_mini all"
 	],
 	"dependencies": {
+		"@date-io/date-fns": "^1.3.13",
 		"@material-ui/core": "^4.11.0",
 		"@material-ui/icons": "^4.11.2",
+		"@material-ui/pickers": "^3.3.10",
 		"axios": "^0.21.1",
 		"compression": "^1.7.4",
 		"connect-session-sequelize": "^7.1.1",
+		"date-fns": "^2.19.0",
 		"deck.gl": "8.1.9",
 		"eosjs": "^21.0.3",
 		"express": "^4.17.1",
