--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"build-client": "webpack",
 		"build-client-watch": "webpack -w",
 		"lint": "eslint ./ --ignore-path .gitignore",
+		"deploy": "script/deploy",
 		"lint-fix": "npm run lint -- --fix",
 		"prettify": "prettier --write \"**/*.{js,jsx,json,css,scss,md}\"",
 		"postinstall": "touch secrets.js",
