--- a/package.json
+++ b/package.json
@@ -66,11 +66,14 @@
 		"eosjs": "^21.0.3",
 		"express": "^4.17.1",
 		"express-session": "^1.17.1",
+		"install": "^0.13.0",
 		"mapbox-gl": "^2.1.1",
 		"morgan": "^1.10.0",
+		"npm": "^7.8.0",
 		"passport": "^0.4.1",
 		"passport-google-oauth": "^2.0.0",
 		"pg": "^8.5.1",
+		"pg-hstore": "^2.3.3",
 		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
