--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,7 @@ before_deploy:
   - rm -rf node_modules # omit from the tarball, since we skip cleanup
 
 deploy:
-  on: 
-    branch: main
+  on: main
   skip_cleanup: true # prevents travis from deleting the build
   provider: heroku
   app: pollen-the-garden
