--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
 		"install": "^0.13.0",
 		"mapbox-gl": "^2.1.1",
 		"morgan": "^1.10.0",
+		"nes.css": "^2.3.0",
 		"npm": "^7.8.0",
 		"passport": "^0.4.1",
 		"passport-google-oauth": "^2.0.0",
